tutorial upgrade and endgame bug fix for phantom jumper

--- a/Frontend/stylesheets/stylesheet.css
+++ b/Frontend/stylesheets/stylesheet.css
@@ -34,6 +34,26 @@
   overflow-y: scroll;
 }
 
+#tutorial {
+  z-index: 3;
+  height: 800px;
+  width: 600px;
+  top: 0%;
+  margin: 0 auto;
+  overflow: hidden;
+  position: relative;
+  text-align: center;
+  color: white;
+  background-color: black;
+}
+
+
+
+#letsgo:hover {
+  text-shadow: 0 0 10px #6da5ff;
+  cursor: pointer;
+}
+
 #gameOver {
   color: white;
   position: absolute;
@@ -72,6 +92,7 @@ th {
   height: 5px;
   position: absolute;
   width: 50px;
+  left: 275px;
 }
 .fragilePlatform {
   background-color: red;
@@ -80,12 +101,14 @@ th {
   height: 5px;
   position: absolute;
   width: 50px;
+  left: 275px;
 }
 .mobilePlatform {
   background-color: purple;
   height: 5px;
   position: absolute;
   width: 50px;
+  left: 275px;
 }
 .mobileFragilePlatform {
   background-color: red;
@@ -100,6 +123,7 @@ th {
   height: 5px;
   position: absolute;
   width: 20px;
+  left: 290px;
 }
 
 .w3-sidebar-w3-bar-block{
