--- a/Frontend/stylesheets/stylesheet2.css
+++ b/Frontend/stylesheets/stylesheet2.css
@@ -37,6 +37,20 @@
   overflow-y: scroll;
 }
 
+#tutorial {
+  z-index: 3;
+  height: 800px;
+  width: 600px;
+  top: 0%;
+  margin: 0 auto;
+  overflow: hidden;
+  position: relative;
+  text-align: center;
+  color: white;
+  background-color: black;
+  font-family: Arial;
+}
+
 #gameOver {
   color: white;
   position: absolute;
@@ -75,6 +89,7 @@ th {
   height: 5px;
   position: absolute;
   width: 50px;
+  left: 275px;
 }
 .fragilePlatform {
   background-color: red;
@@ -83,12 +98,14 @@ th {
   height: 5px;
   position: absolute;
   width: 50px;
+  left: 275px;
 }
 .mobilePlatform {
   background-color: purple;
   height: 5px;
   position: absolute;
   width: 50px;
+  left: 275px;
 }
 .mobileFragilePlatform {
   background-color: red;
@@ -103,6 +120,7 @@ th {
   height: 5px;
   position: absolute;
   width: 20px;
+  left: 290px;
 }
 
 .w3-sidebar-w3-bar-block{
