--- a/Frontend/stylesheets/stylesheet3.css
+++ b/Frontend/stylesheets/stylesheet3.css
@@ -34,6 +34,19 @@
   overflow-y: scroll;
 }
 
+#tutorial {
+  z-index: 3;
+  height: 800px;
+  width: 600px;
+  top: 0%;
+  margin: 0 auto;
+  overflow: hidden;
+  position: relative;
+  text-align: center;
+  color: white;
+  background-color: black;
+}
+
 #gameOver {
   color: white;
   position: absolute;
@@ -71,6 +84,7 @@ th {
   height: 5px;
   position: absolute;
   width: 50px;
+  left: 275px;
 }
 .fragilePlatform {
   background-color: red;
@@ -79,12 +93,14 @@ th {
   height: 5px;
   position: absolute;
   width: 50px;
+  left: 275px;
 }
 .mobilePlatform {
   background-color: purple;
   height: 5px;
   position: absolute;
   width: 50px;
+  left: 275px;
 }
 .mobileFragilePlatform {
   background-color: red;
@@ -99,6 +115,7 @@ th {
   height: 5px;
   position: absolute;
   width: 20px;
+  left: 290px;
 }
 
 .w3-sidebar-w3-bar-block{
